--- a/src/main/resources/templates/purchasingmanagement2/purchasin_management_add_settlement_medicine.html
+++ b/src/main/resources/templates/purchasingmanagement2/purchasin_management_add_settlement_medicine.html
@@ -3,7 +3,7 @@
     <!-- 页面meta -->
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="IE=edge">
-    <title>结算管理</title>
+    <title>添加结算药品</title>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no" name="viewport">
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -20,6 +20,78 @@
             window.location.href="down";
         }
     </script>
+
+    <script type="text/javascript">
+
+        var returnOrderNumber = $("#return_order_number").val();
+        var returnOrderName = $("#return_order_name").val();
+        var hospitalId = $("#hospital_id").val();
+        var contacts = $("#contacts").val();
+        var phone = $("#phone").val();
+        var creatReceiptsPerson = $("#creat_receipts_person").val();
+        var createReceiptsTime = $("#create_receipts_time").val();
+        var submissionTime = $("#submission_time").val();
+        var remark = $("#remark").val();
+        var returnStateId = $("#return_state_id").val();
+
+        function saveReturnForm(){
+            $.ajax({
+
+            })
+        }
+
+
+        /*/!*批量删除*!/
+        function xiaOnclick() {
+            var clickpool = true;
+            $.each($(".checkboxxia"),function(index,item){
+                if($(item).prop("checked")==false)clickpool=false;
+            })
+            $("#checkboxMain").prop("checked",clickpool)
+        }
+
+        function mainOnclick() {
+            $.each($(".checkboxxia"),function(index,item){
+                $(item).prop("checked",$("#checkboxMain").prop("checked"));
+            })
+        }
+
+        function BatchDelete() {
+            var bool = false;
+            var list = new Array();
+            /!*var st="";*!/
+            $.each($("input[class='checkboxxia']:checkbox:checked"),function(index,item){
+                list.push($(item).val());
+
+                /!*st+=$(item).val()+",";*!/
+
+                /!*console.log($(item).val());*!/
+                bool = true;
+            });
+
+            if(true){
+                $.ajax({
+                    type:"GET",
+                    url:"removeByKeys",
+                    dataType:"json",
+                    data:{"list":list}, // 传输一个list集合包含所选框的id,,,,也可以传一个st到后台data:{"list":st},
+                    success:function (result) {
+                        var b = result;
+                        if (result > 0){
+                            alert("删除成功!");
+                            window.location.reload();
+                        }else{
+                            alert("删除失败!");
+                        }
+                    }
+                })
+            }else {
+                alert("请选择数据");
+            }
+        }*/
+    </script>
+
+
 
 </head>
 <body class="hold-transition skin-red sidebar-mini" ng-app="shebao" ng-controller="registrationOfCasesController">
@@ -38,6 +110,8 @@
             <td >
                 <input class="form-control" id="searchEntity_unitName">
             </td>
+
+
             <td style="text-align: right"><span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购单名称：</span>
             </td>
             <td >
@@ -47,7 +121,7 @@
 
         <tr>
             <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">结算状态：</span>
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">供货商：</span>
             </td>
             <td>
                 <select style="width: 50%;height: 20%">
@@ -55,27 +129,14 @@
                 </select>
                 <!-- <input class="form-control" id="searchEntity_nameOfRegistrant" >-->
             </td>
-
             <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">采购医院：</span>
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
             </td>
             <td>
-                <input class="form-control">
-            </td>
-        </tr>
-
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">开始采购时间：</span>
-            </td>
-            <td>
-                <input class="form-control">
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">结束采购时间：</span>
-            </td>
-            <td>
-                <input class="form-control">
+                <select style="width: 50%;height: 20%">
+                    <option value="0">全部</option>
+                </select>
+                <!-- <input class="form-control" id="" >-->
             </td>
         </tr>
         <tr>
@@ -145,27 +206,27 @@
                 <!-- <input class="form-control" id="" style="width: 50%;height: 20%">-->
             </td>
             <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品类别：</span>
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">入库时间：</span>
+            </td>
+            <td style="word-break: keep-all;white-space: nowrap;width: 32%">
+                <input style="width: 40%"><span style="color: #0E74B4">至</span><input style="width: 40%;">
+            </td>
+        </tr>
+        <tr>
+            <td style="text-align: right">
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品批号：</span>
+            </td>
+            <td>
+                <input class="form-control">
+            </td>
+            <td style="text-align: right">
+                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">退货状态：</span>
             </td>
             <td>
                 <select style="width: 50%;height: 20%">
                     <option value="0">全部</option>
                 </select>
                 <!-- <input class="form-control" id="" >-->
-            </td>
-        </tr>
-        <tr>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">入库时间：</span>
-            </td>
-            <td style="word-break: keep-all;white-space: nowrap;width: 32%">
-                <input style="width: 50%"><span style="color: #0E74B4">至</span><input style="width: 50%;">
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">药品批号：</span>
-            </td>
-            <td>
-                <input class="form-control">
             </td>
         </tr>
         <tr>
@@ -174,15 +235,6 @@
             </td>
             <td>
                 <input class="form-control">
-            </td>
-            <td style="text-align: right">
-                <span style="white-space: nowrap;display: inline-block;color: #0E74B4">供货商：</span>
-            </td>
-            <td>
-                <select style="width: 50%;height: 20%">
-                    <option value="0">全部</option>
-                </select>
-                <!-- <input class="form-control" id="" >-->
             </td>
         </tr>
     </table>
@@ -205,8 +257,10 @@
                         <button type="button" class="btn btn-success btn-sm" data-toggle="modal"
                                 data-target="#editModal1">添加
                         </button>
-                        <button type="button" class="btn btn-success btn-sm" data-toggle="modal"
-                                data-target="#">删除
+                        <button type="button" class="btn btn-success btn-sm" onclick="BatchDelete()">
+                            删除
+                        </button>
+                        <button type="button" class="btn btn-success btn-sm" >保存退货量
                         </button>
                     </div>
                 </div>
@@ -219,53 +273,46 @@
             <tr>
                 <th class="sorting_asc">采购单编号</th>
                 <th class="sorting_asc">采购单名称</th>
-                <th class="sorting">流水号</th>
+                <th class="sorting">供货商</th>
+                <th class="sorting">药品类别</th>
+                <th class="sorting">药品流水号</th>
                 <th class="sorting">通用名</th>
-                <th class="sorting">商品名</th>
-                <th class="sorting">中标价</th>
-                <th class="sorting">交易价</th>
-                <th class="sorting">采购量</th>
-                <th class="sorting">采购金额</th>
-                <th class="sorting">入库量</th>
-                <th class="sorting">实际交易金额</th>
-                <th class="sorting">发票号或入库单号</th>
-                <th class="sorting">药品批号</th>
-                <th class="sorting">药品有效期</th>
-                <th class="sorting">退货量</th>
-                <th class="sorting">退货金额</th>
                 <th class="sorting">剂型</th>
                 <th class="sorting">规格</th>
                 <th class="sorting">单位</th>
                 <th class="sorting">转换系数</th>
-                <th class="sorting">质量层次</th>
                 <th class="sorting">生产企业</th>
-                <th class="sorting">供货企业</th>
-                <th class="sorting">开始采购时间</th>
-                <th class="sorting">结束采购时间</th>
-                <th class="sorting">采购状态</th>
-                <th class="sorting">详细</th>
+                <th class="sorting">商品名</th>
+                <th class="sorting">质量层次</th>
+                <th class="sorting">入库时间</th>
+                <th class="sorting">药品批号</th>
+                <th class="sorting">退货状态</th>
+                <th class="sorting">发票号或入库单号</th>
                 <th class="sorting">修改</th>
-                <th class="sorting">删除</th>
+
             </tr>
             </thead>
             <tbody class="context">
             <tr>
                 <td>00008</td>
-                <td>0.9%氯化钠</td>
-                <td>大输液</td>
-                <td>1000ml（玻瓶）</td>
+                <td>0.</td>
+                <td>大输</td>
+                <td>1</td>
                 <td>瓶</td>
                 <td>1</td>
-                <td></td>
+                <td>3</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
+                <td>正常</td>
                 <td>正常</td>
                 <td>
-                    <a href="#">查看</a>
-                </td>
-                <td>
                     <a href="#">修改</a>
-                </td>
-                <td>
-                    <a href="#">删除</a>
                 </td>
             </tr>
             </tbody>
@@ -307,49 +354,45 @@
             <div class="modal-body">
                 <table class="table table-bordered table-striped" id="id_table">
                     <tr>
-                        <td>医院编号:</td>
-                        <td><input id="#" name="organizationalCode" class="form-control"></td>
-                        <td>医院名称:</td>
-                        <td><input id="organizationalCode1" name="organizationalCode" class="form-control"></td>
+                        <td>结算单编号:</td>
+                        <td><input id="return_order_number" name="returnOrderNumber" class="form-control"></td>
+                        <td>结算单名称:</td>
+                        <td><input id="return_order_name" name="returnOrderName" class="form-control"></td>
                     </tr>
                     <tr>
-                        <td>结算单编号:</td>
-                        <td><input id="#1" name="organizationalCode" class="form-control"></td>
+                        <td>医院id:</td>
+                        <td><input id="hospital_id" name="hospitalId" class="form-control"></td>
 
-                        <td>结算单名称:</td>
-                        <td><input id="idCard1" name="idCard" class="form-control">
+                        <td>联系人:</td>
+                        <td><input id="contacts" name="contacts" class="form-control">
                         </td>
                     </tr>
                     <tr>
-                        <td>结算时间:</td>
-                        <td><input id="phone1" name="phone" class="form-control"></td>
-
-                        <td>建单时间:</td>
-                        <td><input id="nameOfRegistrant1" name="" class="form-control"></td>
-                    </tr>
-                    <tr>
-                        <td>联系人:</td>
-                        <td><input id="#2" name="organizationalCode" class="form-control"></td>
-
                         <td>联系电话:</td>
-                        <td><input id="#3" name="organizationalCode" class="form-control"></td>
+                        <td><input id="phone" name="phone" class="form-control"></td>
+
+                        <td>建单人:</td>
+                        <td><input id="creat_receipts_person" name="creatReceiptsPerson" class="form-control"></td>
                     </tr>
                     <tr>
-                        <td>退货单状态:</td>
-                        <td><input id="#4" name="organizationalCode" class="form-control"></td>
+                        <td>建单时间:</td>
+                        <td><input id="create_receipts_time" name="createReceiptsTime" class="form-control"></td>
 
                         <td>提交时间:</td>
-                        <td><input id="#5" name="organizationalCode" class="form-control"></td>
+                        <td><input id="submission_time" name="submissionTime" class="form-control"></td>
                     </tr>
                     <tr>
                         <td>备注:</td>
-                        <td><input id="#6" name="organizationalCode" class="form-control"></td>
+                        <td><input id="remark" name="remark" class="form-control"></td>
+
+                        <td>结算单状态:</td>
+                        <td><input id="return_state_id" name="returnStateId" class="form-control"></td>
                     </tr>
                 </table>
             </div>
             <div class="modal-footer">
-                <button class="btn btn-success" ng-click="save()" data-dismiss="modal" onclick="updataRegistrationOfCases()">保存结算单</button>
-                <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">提交结算单</button>
+                <button class="btn btn-success" onclick="saveReturnForm()" data-dismiss="modal">保存结算单</button>
+                <button class="btn btn-default" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
         </div>
     </div>
@@ -374,8 +417,13 @@
                 <button class="btn btn-warning" onclick="">查看导入失败结果</button>
                 <button class="btn btn-danger" data-dismiss="modal" aria-hidden="true">关闭</button>
             </div>
+
+
         </div>
     </div>
 </div>
 </body>
 </html>
+
+
+
